--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -3,30 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/memes_screen_fragment"
-    android:background="@color/background_color"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_color"
+    android:paddingStart="@dimen/spacing_6x"
+    android:paddingEnd="@dimen/spacing_6x">
 
     <TextView
         android:id="@+id/title"
         style="@style/TextView.Title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_6x"
-        android:layout_marginEnd="@dimen/spacing_6x"
         android:text="@string/title_memes"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/meme_descriptions"
         style="@style/TextView.Descriptions"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_6x"
-        android:layout_marginEnd="@dimen/spacing_6x"
-        android:text="@string/title_memes"
+        android:background="@drawable/background_descriptions"
+        android:gravity="center"
+        android:padding="@dimen/spacing_4x"
+        android:text="@string/descriptions"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
@@ -37,8 +38,6 @@
         style="@style/RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_6x"
-        android:layout_marginEnd="@dimen/spacing_6x"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/meme_descriptions" />
