--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -43,6 +43,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/meme_descriptions" />
 
+    <androidx.constraintlayout.widget.Group
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:constraint_referenced_ids="scannerView"
+        />
+
+    <ru.androidacademy.droidfactory.views.CameraSourcePreview
+        android:id="@+id/scannerView"
+        android:layout_width="100dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="24dp"
+        />
+
+    <ru.androidacademy.droidfactory.views.GraphicOverlay
+        android:id="@+id/graphic_overlay"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/scannerView"
+        app:layout_constraintStart_toStartOf="@id/scannerView"
+        app:layout_constraintEnd_toEndOf="@id/scannerView"
+        app:layout_constraintBottom_toBottomOf="@id/scannerView"
+        />
+
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/progress_bar"
         style="@style/ProgressBarStyle"
