--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -35,13 +35,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_memes"
         style="@style/RecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="@dimen/spacing_6x"
         android:layout_marginEnd="@dimen/spacing_6x"
+        app:layout_constraintBottom_toTopOf="@+id/scannerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/meme_descriptions" />
+        app:layout_constraintTop_toBottomOf="@id/meme_descriptions"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Group
         android:layout_width="0dp"
