--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -34,11 +34,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_memes"
-        style="@style/RecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="@dimen/spacing_6x"
-        android:layout_marginEnd="@dimen/spacing_6x"
+        android:layout_marginTop="@dimen/spacing_12x"
+        android:layout_marginBottom="@dimen/spacing_12x"
         app:layout_constraintBottom_toTopOf="@+id/scannerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
