--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -74,13 +74,14 @@
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/progress_bar"
         style="@style/ProgressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
 
     </androidx.core.widget.ContentLoadingProgressBar>
 
