--- a/app/src/main/res/layout/view_overlayable_image.xml
+++ b/app/src/main/res/layout/view_overlayable_image.xml
@@ -13,6 +13,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription"
+        tools:src="@tools:sample/avatars" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_hor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.15">
+    </androidx.constraintlayout.widget.Guideline>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="@dimen/spacing_4x"
+        app:layout_constraintEnd_toEndOf="@id/image_view"
+        app:layout_constraintTop_toBottomOf="@id/guideline_hor"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/like_animation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
