--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -14,6 +14,7 @@
         style="@style/TextView.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="@string/title_memes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +27,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/background_descriptions"
         android:gravity="center"
+        android:layout_marginTop="16dp"
         android:padding="@dimen/spacing_4x"
+        android:minLines="3"
+        android:maxLines="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
