--- a/app/src/main/res/layout/view_overlayable_image.xml
+++ b/app/src/main/res/layout/view_overlayable_image.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--       TODO background облако-->
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
@@ -14,6 +13,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:padding="@dimen/spacing_0_5x"
+        android:background="@drawable/white_border"
         tools:ignore="ContentDescription"
         tools:src="@tools:sample/avatars" />
 
