--- a/app/src/main/res/drawable/background_mem.xml
+++ b/app/src/main/res/drawable/background_mem.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="@color/color_white" />
     <corners android:radius="@dimen/spacing_2x" />
-    <stroke
-        android:width="@dimen/spacing_2x"
-        android:color="@color/color_white" />
 </shape>
