--- a/app/src/main/res/layout/memes_screen_fragment.xml
+++ b/app/src/main/res/layout/memes_screen_fragment.xml
@@ -14,8 +14,9 @@
         style="@style/TextView.Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/spacing_6x"
         android:text="@string/title_memes"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -56,7 +57,7 @@
         android:foreground="@drawable/white_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="60dp"
         />
 
     <ru.androidacademy.droidfactory.views.GraphicOverlay
